Bug 618118 - Crash when uninstalling an add-on with bad bootstrap.js [@ JSCompartment::wrap ]. r=jst a=b