js/src/xpconnect/loader/mozJSSubScriptLoader.cpp
@@ -401,6 +401,7 @@ mozJSSubScriptLoader::LoadSubScript (const PRUnichar * aURL
         }
     }
 
+    if (ok)
     {
         JSAutoEnterCompartment rac;
 
